trunk/Archive/2fd92d6e446bfac6ab7f4050853f5994-358b00f922937f6178194030f4f0e3ca/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'void foo(T&& ...)':
main.cpp:6:16: error: 'foo_t' was not declared in this scope
     std::array<foo_t, sizeof...(T)> = { std::forward<T>(ts)... };
                ^
main.cpp:6:35: error: template argument 1 is invalid
     std::array<foo_t, sizeof...(T)> = { std::forward<T>(ts)... };
                                   ^
main.cpp:6:37: error: expected unqualified-id before '=' token
     std::array<foo_t, sizeof...(T)> = { std::forward<T>(ts)... };
                                     ^
